--- a/gb/19/8/18/n11460575.md
+++ b/gb/19/8/18/n11460575.md
@@ -1,66 +1,58 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>¹ÇÊÝÈç²ñµÄ70Ëê´óÏó±»ÆÈ²Î¼ÓÓÎÐÐ ÍøÃñÐÄÍ´</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1161619916-600x400.jpg" />
-<h6>Ë¹ÀïÀ¼¿¨Ò»Ö»70ËêÀÏÏó±»ÆÈ²Î¼ÓÓÎÐÐ»î¶¯£¬ÒýÆð¸Ã¹úÃñÖÚµÄ·ß¿®¡£´ËÍ¼ÉãÓÚ2019Äê8ÔÂ13ÈÕ¡£(STR/AFP/Getty Images)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aakpdw3186/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/aakpdw3186/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/aakpdw3186/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/aakpdw3186/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>éª¨ç˜¦å¦‚æŸ´çš„70å²å¤§è±¡è¢«è¿«å‚åŠ æ¸¸è¡Œ ç½‘æ°‘å¿ƒç—›</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1161619916-600x400.jpg" />
+<h6>æ–¯é‡Œå…°å¡ä¸€åª70å²è€è±¡è¢«è¿«å‚åŠ æ¸¸è¡Œæ´»åŠ¨ï¼Œå¼•èµ·è¯¥å›½æ°‘ä¼—çš„æ„¤æ…¨ã€‚æ­¤å›¾æ‘„äºŽ2019å¹´8æœˆ13æ—¥ã€‚(STR/AFP/Getty Images)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê08ÔÂ18ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕß³Â¿¡´å±àÒë±¨µ¼£©ÔÚ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E6%96%AF%E9%87%8C%E5%85%B0%E5%8D%A1.md">Ë¹ÀïÀ¼¿¨</a>½üÆÚ¾ÙÐÐµÄÄê¶È·ð½ÌÇìµäÖÐ£¬Ò»Ö»¸ßÁä70Ëê¡¢¿´ÆðÀ´Ê®·ÖÊÝÈõºÍã¾ã²µÄ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%A4%A7%E8%B1%A1.md">´óÏó</a>±»ÆÈÉÏ½Ö<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md">ÓÎÐÐ</a>£¬ÈÃÍøÃñ¸Ðµ½¾¾ÐÄÓë·ß¿®£¬½ø¶ø´ó¼ÓÌ¢·¥¡£¸Ã¹úÓÐ¹Øµ±¾ÖÒÑ¾­¶Ô´ËÊÂÕ¹¿ªµ÷²é¡£</p>
-<p>ÔÚ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E6%96%AF%E9%87%8C%E5%85%B0%E5%8D%A1.md">Ë¹ÀïÀ¼¿¨</a>ÖÐ²¿³ÇÊÐ¿µÌá£¨Kandy£©£¬µ±µØµÄ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E4%BD%9B%E7%89%99%E5%AF%BA.md">·ðÑÀËÂ</a>£¨Temple of the Tooth£©Ã¿ÄêÏÄÌì¶¼»á¾Ù°ì<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E4%BD%9B%E7%89%99%E8%8A%82.md">·ðÑÀ½Ú</a>£¨Esala Perahera£©µÄÇì×£»î¶¯£¬ÆäÖÐ°üÀ¨ÖÚ¶à×°°ç»ªÀöµÄ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%A4%A7%E8%B1%A1.md">´óÏó</a>ÉÏ½Ö<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md">ÓÎÐÐ</a>¡£</p>
-<p>Ì©¹ú¡°Õü¾È´óÏó»ù½ð»á¡±£¨Save Elephant Foundation£©´´°ìÈË²éÀíÌØ£¨Lek Chailert£©ÓÚ8ÔÂ13ÈÕÔÚÁ³ÊéÉÏÐ´µÀ£¬½ñÄêÓÐ60Ö»´óÏóÁ¬Ðø10Íí±»ÆÈÔÚÇìµäµÄàÐÔÓÉùºÍÑÌ»ðÖÐÓÎÐÐ£¬¶øÇÒÍÈ²¿±»ÏµÉÏÁÍîí£¬Ö»ÄÜ»º²½ÐÐ×ß¡£</p>
-<p>ÆäÖÐ£¬ÓÐÒ»Ö»Ãû½ÐÌáÆæÀò£¨Tikiri£©µÄ70ËêÄ¸Ïó£¬²»µ«ÄêÂõ¶øÇÒÊÝÈõ£¬µ«ËüÃ¿ÍíÈÔ±ØÐë×ß¼¸¹«ÀïµÄÂ·£¬ÕâÑùÈËÃÇÔÚÇìµäÉÏ²Å»á¸ÐÊÜµ½±»´Í¸£¡£</p>
-<p><a src=></a><img width="600" src="https://raw.githubusercontent.com/liczai2340/1/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebookÊÓÆµ»òÍ¼Æ¬.¹úÄÚ½¨ÒéÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>½øÈëÔ­ÎÄ¹Û¿´)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FSaveElephantFoundation%2Fposts%2F2361434793925283&amp;width=500" width="500px" b="763px"></a></p>
-<p>È»¶ø£¬²éÀíÌØËµ£¬Ã»ÓÐÈË¿´¼ûËü¹ÇÊÝÈç²ñ£¬ÒòÎªËüÅû×Å»ªÀöµÄÍâÒÂ¡£Ã»ÓÐÈË¿´¼ûËü±»×°ÊÎÃæ¾ßµÄÃ÷ÁÁµÆ¹âÉËº¦µÄÑÛ¾¦·º×ÅÀá¹â£¬Ò²Ã»ÓÐÈË¿´µ½ËüÒòÍÈ²¿±»ÏµÉÏ½ÅÁÍ¶ø¾Ù²½Î¬¼è¡£</p>
-<p>²éÀíÌØÐ´µÀ£º¡°Èç¹ûÎÒÃÇÈÃÆäËûÉúÃüÊÜ¿à£¬ÎÒÃÇÈçºÎÄÜ½«Ö®³ÆÎª×£¸£»òÉñÊ¥µÄÊÂÄØ£¿¡±</p>
-<p>ÔÚÉç½»Ã½ÌåµÄÒ»ÕóÉùÌÖÖ®ºó£¬<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E4%BD%9B%E7%89%99%E5%AF%BA.md">·ðÑÀËÂ</a>Ïà¹ØÈËÔ±³öÃæ±íÊ¾£¬ÌáÆæÀòÓÐÊÜµ½¡°Í×ÉÆÕÕ¹Ë¡±£¬ËûÃÇÒÑ¾­ÈÃËüÍË³ö8ÔÂ14ÈÕµÄÇìµä»î¶¯¡£</p>
-<p>Ë¹ÀïÀ¼¿¨¶¯Îï±£»¤²¿ÃÅÒÑÔÚ8ÔÂ16ÈÕÏÂÁî¶Ô´ËÊÂ½øÐÐµÄµ÷²é£¬¶øÇÒÈ·±£´óÏó±»Å°´ýµÄÊÂÇé²»»áÔÙ´Î·¢Éú¡£</p>
-<p>¸Ã¹úÑÇÖÞÏó×¨¼Ò¼ÖÑÇÍß¶ûµÂÄÉ£¨Jayantha Jayewardene£©½«Èç´ËµÄÅ°´ýÃèÊöÎª¡°²»ÈËµÀ¡±¡£Ëû¸æËß·¨ÐÂÉçËµ£º¡°ºÜÏÔÈ»£¬ÕâÖ»¶¯ÎïÑÏÖØÓªÑø²»Á¼£¬ËüÒÑ½Ó½üËÀÍö¡£¡±</p>
-<p>ºÜ¶àÓÐÇ®µÄË¹ÀïÀ¼¿¨ÈËËÇÑø´óÏóµ±³èÎï£¬µ«ÆäÅ°´ýºÍ²ÐÈÌÐÐÎªÊ±ÓÐËùÎÅ¡£</p>
-<p>ÔðÈÎ±à¼­£ºÜÔÀò</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´08æœˆ18æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…é™ˆä¿Šæ‘ç¼–è¯‘æŠ¥å¯¼ï¼‰åœ¨<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E6%96%AF%E9%87%8C%E5%85%B0%E5%8D%A1.md#1">æ–¯é‡Œå…°å¡</a>è¿‘æœŸä¸¾è¡Œçš„å¹´åº¦ä½›æ•™åº†å…¸ä¸­ï¼Œä¸€åªé«˜é¾„70å²ã€çœ‹èµ·æ¥ååˆ†ç˜¦å¼±å’Œæ†”æ‚´çš„<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E5%A4%A7%E8%B1%A1.md#1">å¤§è±¡</a>è¢«è¿«ä¸Šè¡—<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md#1">æ¸¸è¡Œ</a>ï¼Œè®©ç½‘æ°‘æ„Ÿåˆ°æªå¿ƒä¸Žæ„¤æ…¨ï¼Œè¿›è€Œå¤§åŠ æŒžä¼ã€‚è¯¥å›½æœ‰å…³å½“å±€å·²ç»å¯¹æ­¤äº‹å±•å¼€è°ƒæŸ¥ã€‚</p>
+<p>åœ¨<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E6%96%AF%E9%87%8C%E5%85%B0%E5%8D%A1.md#1">æ–¯é‡Œå…°å¡</a>ä¸­éƒ¨åŸŽå¸‚åº·æï¼ˆKandyï¼‰ï¼Œå½“åœ°çš„<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E4%BD%9B%E7%89%99%E5%AF%BA.md#1">ä½›ç‰™å¯º</a>ï¼ˆTemple of the Toothï¼‰æ¯å¹´å¤å¤©éƒ½ä¼šä¸¾åŠž<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E4%BD%9B%E7%89%99%E8%8A%82.md#1">ä½›ç‰™èŠ‚</a>ï¼ˆEsala Peraheraï¼‰çš„åº†ç¥æ´»åŠ¨ï¼Œå…¶ä¸­åŒ…æ‹¬ä¼—å¤šè£…æ‰®åŽä¸½çš„<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E5%A4%A7%E8%B1%A1.md#1">å¤§è±¡</a>ä¸Šè¡—<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E6%B8%B8%E8%A1%8C.md#1">æ¸¸è¡Œ</a>ã€‚</p>
+<p>æ³°å›½â€œæ‹¯æ•‘å¤§è±¡åŸºé‡‘ä¼šâ€ï¼ˆSave Elephant Foundationï¼‰åˆ›åŠžäººæŸ¥ç†ç‰¹ï¼ˆLek Chailertï¼‰äºŽ8æœˆ13æ—¥åœ¨è„¸ä¹¦ä¸Šå†™é“ï¼Œä»Šå¹´æœ‰60åªå¤§è±¡è¿žç»­10æ™šè¢«è¿«åœ¨åº†å…¸çš„å˜ˆæ‚å£°å’ŒçƒŸç«ä¸­æ¸¸è¡Œï¼Œè€Œä¸”è…¿éƒ¨è¢«ç³»ä¸Šé•£é“ï¼Œåªèƒ½ç¼“æ­¥è¡Œèµ°ã€‚</p>
+<p>å…¶ä¸­ï¼Œæœ‰ä¸€åªåå«æå¥‡èŽ‰ï¼ˆTikiriï¼‰çš„70å²æ¯è±¡ï¼Œä¸ä½†å¹´è¿ˆè€Œä¸”ç˜¦å¼±ï¼Œä½†å®ƒæ¯æ™šä»å¿…é¡»èµ°å‡ å…¬é‡Œçš„è·¯ï¼Œè¿™æ ·äººä»¬åœ¨åº†å…¸ä¸Šæ‰ä¼šæ„Ÿå—åˆ°è¢«èµç¦ã€‚</p>
+<p><a src=></a><img width="600" src="https://raw.githubusercontent.com/aakpdw3186/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebookè§†é¢‘æˆ–å›¾ç‰‡.å›½å†…å»ºè®®ä¸‹è½½<a href="https://github.com/aakpdw3186/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>è¿›å…¥åŽŸæ–‡è§‚çœ‹)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FSaveElephantFoundation%2Fposts%2F2361434793925283&amp;width=500" width="500px" b="763px"></a></p>
+<p>ç„¶è€Œï¼ŒæŸ¥ç†ç‰¹è¯´ï¼Œæ²¡æœ‰äººçœ‹è§å®ƒéª¨ç˜¦å¦‚æŸ´ï¼Œå› ä¸ºå®ƒæŠ«ç€åŽä¸½çš„å¤–è¡£ã€‚æ²¡æœ‰äººçœ‹è§å®ƒè¢«è£…é¥°é¢å…·çš„æ˜Žäº®ç¯å…‰ä¼¤å®³çš„çœ¼ç›æ³›ç€æ³ªå…‰ï¼Œä¹Ÿæ²¡æœ‰äººçœ‹åˆ°å®ƒå› è…¿éƒ¨è¢«ç³»ä¸Šè„šé•£è€Œä¸¾æ­¥ç»´è‰°ã€‚</p>
+<p>æŸ¥ç†ç‰¹å†™é“ï¼šâ€œå¦‚æžœæˆ‘ä»¬è®©å…¶ä»–ç”Ÿå‘½å—è‹¦ï¼Œæˆ‘ä»¬å¦‚ä½•èƒ½å°†ä¹‹ç§°ä¸ºç¥ç¦æˆ–ç¥žåœ£çš„äº‹å‘¢ï¼Ÿâ€</p>
+<p>åœ¨ç¤¾äº¤åª’ä½“çš„ä¸€é˜µå£°è®¨ä¹‹åŽï¼Œ<ahref="https://github.com/aakpdw3186/djy/blob/master/gb/tag/%E4%BD%9B%E7%89%99%E5%AF%BA.md#1">ä½›ç‰™å¯º</a>ç›¸å…³äººå‘˜å‡ºé¢è¡¨ç¤ºï¼Œæå¥‡èŽ‰æœ‰å—åˆ°â€œå¦¥å–„ç…§é¡¾â€ï¼Œä»–ä»¬å·²ç»è®©å®ƒé€€å‡º8æœˆ14æ—¥çš„åº†å…¸æ´»åŠ¨ã€‚</p>
+<p>æ–¯é‡Œå…°å¡åŠ¨ç‰©ä¿æŠ¤éƒ¨é—¨å·²åœ¨8æœˆ16æ—¥ä¸‹ä»¤å¯¹æ­¤äº‹è¿›è¡Œçš„è°ƒæŸ¥ï¼Œè€Œä¸”ç¡®ä¿å¤§è±¡è¢«è™å¾…çš„äº‹æƒ…ä¸ä¼šå†æ¬¡å‘ç”Ÿã€‚</p>
+<p>è¯¥å›½äºšæ´²è±¡ä¸“å®¶è´¾äºšç“¦å°”å¾·çº³ï¼ˆJayantha Jayewardeneï¼‰å°†å¦‚æ­¤çš„è™å¾…æè¿°ä¸ºâ€œä¸äººé“â€ã€‚ä»–å‘Šè¯‰æ³•æ–°ç¤¾è¯´ï¼šâ€œå¾ˆæ˜¾ç„¶ï¼Œè¿™åªåŠ¨ç‰©ä¸¥é‡è¥å…»ä¸è‰¯ï¼Œå®ƒå·²æŽ¥è¿‘æ­»äº¡ã€‚â€</p>
+<p>å¾ˆå¤šæœ‰é’±çš„æ–¯é‡Œå…°å¡äººé¥²å…»å¤§è±¡å½“å® ç‰©ï¼Œä½†å…¶è™å¾…å’Œæ®‹å¿è¡Œä¸ºæ—¶æœ‰æ‰€é—»ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šèŒ‰èŽ‰</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/8/18/n11460575.htm">¹ÇÊÝÈç²ñµÄ70Ëê´óÏó±»ÆÈ²Î¼ÓÓÎÐÐ ÍøÃñÐÄÍ´</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/13/n11320363.htm">ÎÞÒ°Éú¶¯ÎïµÄÂíÏ·ÍÅ£¡µÂÊ×´´È«Ï¢3D±íÑÝ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/11/n11315387.htm">ÏóÈºÎªÐ¡ÏóËÍÔáÊÓÆµÈÈ´« ¶¯ÎïÍõ¹úµÄ×îºóµÀ±ð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/12/n10846090.htm">·ÇÖÞ´óÏóÔÙ´Î³öÏÖÎÞÏóÑÀµÄÇ÷ÊÆ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/1/9/n10042888.htm">Ó°Æ¬£º¶÷ÈËÏÂºÓÏ´åª ´óÏó¾¹ÕâÑù±£»¤ÖÁÇ×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/11/18/n8506093.htm">´óÏóÔâöùÓãÒ§×¡±Ç Ð¡ÏóÓ¢ÓÂ¾ÈÄ¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/3/6/n4380731.htm">ÃÀ¹úÖªÃûÂíÏ·ÍÅ ½«È¡Ïû´óÏó±íÑÝ</a></li>
-> <li><a href="https://github.com/liczai2340/djy/blob/master/gb/19/6/11/n11315387.md">ÏóÈºÎªÐ¡ÏóËÍÔáÊÓÆµÈÈ´« ¶¯ÎïÍõ¹úµÄ×îºóµÀ±ð</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/16/n11458861.htm">³ÉÁú»¤ÆìÊÖ±»¶ñ¸ã³ÉÌì°²ÃÅ¼û ´Áµ½ÖÐ¹²Í´´¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11455862.htm">¡¾Ö±²¥¡¿8.16-18Ïã¸ÛÏµÁÐ·´ËÍÖÐ»î¶¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/17/n11459235.htm">¡¾Ö±²¥¡¿8.17·´ËÍÖÐÁ½´óÓÎÐÐ ½ÌÊ¦+¹â¸´ºìÍÁ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/17/n11459247.htm">±±´÷ºÓ»áÒé ´«ÖÐ¹²¶¨µ÷·´ËÍÖÐÎªÑÕÉ«¸ïÃü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11274731.htm">¡¾ÏÍºó´«¡¿¿µÎõÇ××ÔÑ¡ÖÐµÄ¶ùÏ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/6/4/n7964805.htm">¡¾ÎÄÊ·¡¿ÓÀÀÖ´óµÛ¿ª½®ÍØÍÁ ÄÒÀ¨¿âÒ³µº(ÉÏ)</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/26/n11411971.htm">ÐÞÐÄÐÞ¿Ú ×Ô»áÔ¶ÀëÔÖ»ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/7/n11437984.htm">²»Ì°ÃÀÉ«·´³ö×Ê¼ÞÅ®ÆÍ ÌÆÈË»ýÒõµÂÑÓÊÙ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11453413.htm">×éÍ¼£ºµ½ÈÕ±¾·¢ÏÖ×Ô¼ºÌ«¸ß Å·ÃÀÍøÓÑÍ¬Ì¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/16/n11458182.htm">ÊÖÂéµ±ÐÄÍóËíµÀÖ¢ºòÈº 1ÕÐ×ÔÎÒ¼ì²â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/17/n11460054.htm">¾Ó×¡ÔÚGreat ParkÉçÇø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/5/n11433011.htm">Ñü±³Í´ÔõÃ´°ì£¿8ÕÐ±£ÑøÑü²¿ ºÍÌÛÍ´°Ý°Ý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11453527.htm">40Ëê×³Äê ²»Ã÷´ó°ÑÍÑ·¢ Ææ¼£ÖÎÓú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11454035.htm">¡¾ÅÄ°¸¾ªÆæ¡¿´¨ÆÕÑûÏ°½âÏã¸ÛÎÊÌâ ÖÐ¹²4ÅÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11454083.htm">¡¾ÐÂÎÅ¿´µã¡¿¾¯¸æÏã¸ÛÎðÖØÑÝÁùËÄ ÃÀÓÐºÎÍõÅÆ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11455965.htm">¡¾ÐÂÎÅ¿´µã¡¿Ïã¸ÛÎ£»ú ´¨ÆÕº°Ï°£ºË½ÈË»áÌ¸£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/16/n11457509.htm">³ÉÁúÕùµ±ÖÐ¹²¡°»¤ÆìÊÖ¡±±»ÍøÃñ¼¥·í</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11453958.htm">Ò»ÎÄ¿´¶®ÖÐ¹²¶ÔÏã¸Û·´ËÍÖÐµÄÔì¼ÙÐû´«</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11454083.htm">¡¾ÐÂÎÅ¿´µã¡¿¾¯¸æÏã¸ÛÎðÖØÑÝÁùËÄ ÃÀÓÐºÎÍõÅÆ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/16/n11458232.htm">ÁõÒà·Æ·¢ÌûÍ¦¸Û¾¯ ÍøÃñ·¢ÆðµÖÖÆ¡¶»¨Ä¾À¼¡·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/16/n11457202.htm">ÎªÊ²Ã´Ð¡Ã¨»á³Ô²Ý£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/16/n11458765.htm">ÏìÓ¦8¡¤16Ìá¿îÈÕ Íõ×ÚÒ¢IGÉ¹Ç®ÞÞÞíÁÖÖ£»¯×±Ê¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11456217.htm">¸ÛÆ¬ÉÌ±»¾¯¸æÍË½ðÂí ¸ßÏÈµçÓ°£ºÈôÈëÎ§ÕÕÑùÈ¥</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11455778.htm">ÉæÏÓÐé¼ÙÐû´« ÕÅÜ°Óè´úÑÔÎ¢ÉÌ±»¿ª80Íò·£µ¥</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11274731.htm">¡¾ÏÍºó´«¡¿¿µÎõÇ××ÔÑ¡ÖÐµÄ¶ùÏ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/6/4/n7964805.htm">¡¾ÎÄÊ·¡¿ÓÀÀÖ´óµÛ¿ª½®ÍØÍÁ ÄÒÀ¨¿âÒ³µº(ÉÏ)</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/26/n11411971.htm">ÐÞÐÄÐÞ¿Ú ×Ô»áÔ¶ÀëÔÖ»ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/7/n11437984.htm">²»Ì°ÃÀÉ«·´³ö×Ê¼ÞÅ®ÆÍ ÌÆÈË»ýÒõµÂÑÓÊÙ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/7/n11437975.htm">ËûÎªÊ²Ã´×ÜÊÇ±³²»ÏÂ×îºóÁ½¾í·ð¾­£¿</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/15/3/6/n4380731.md#1">ç¾Žå›½çŸ¥åé©¬æˆå›¢ å°†å–æ¶ˆå¤§è±¡è¡¨æ¼”</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/16/11/18/n8506093.md#1">å¤§è±¡é­é³„é±¼å’¬ä½é¼» å°è±¡è‹±å‹‡æ•‘æ¯</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/1/9/n10042888.md#1">å½±ç‰‡ï¼šæ©äººä¸‹æ²³æ´—æ¿¯ å¤§è±¡ç«Ÿè¿™æ ·ä¿æŠ¤è‡³äº²</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/11/12/n10846090.md#1">éžæ´²å¤§è±¡å†æ¬¡å‡ºçŽ°æ— è±¡ç‰™çš„è¶‹åŠ¿</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/liczai2340/djy/blob/master/gb/19/8/18/n11460575.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">ã€å¾æ–‡ã€‘ç« é˜ï¼šä¸­å›½å¤ä»£ä¸“åˆ¶å—ï¼ˆä¸Šï¼‰</a></li><li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/4/n11569061.md#1" target="_blank">æ³•è½®åŠŸå­¦å‘˜å—é‚€åœ¨ç¾Žæ™ºåº“æ¼”è®² æ„ŸåŠ¨åŽåºœå¬ä¼—</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/16/n11945071.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘å®˜åª’å¿™é™æ¸©ï¼Ÿèµµç«‹åšåŠäº”æ¯›è¢«æ‰“è„¸</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/16/n11943071.md#1">ã€çŽ°åœºè§†é¢‘ã€‘æ­¦æ±‰åŒ»ç”Ÿæ­ä¸­å…±å…³é—­æ–¹èˆ±å†…å¹•</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/15/n11942229.md#1">å¤§é™†åŽŸå«ç”Ÿé«˜å®˜ï¼šç–«æƒ…æå†çˆ†å‘ è°Žè¨€å°†ç ´ç­</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/16/n11945291.md#1">è“¬ä½©å¥¥ä¸Žæ¨æ´ç¯ªé€šè¯ æ­£å‘ŠåŒ—äº¬å‹¿æ•£æ€ªè¯žè°£è¨€</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/15/n11942593.md#1">ã€ç–«æƒ…é€è§†ã€‘æ¸¯æŠ—ç–«æ˜¾å¥‡è¿¹ å¤©ç­ä¸­å…±æˆä¿å‘½ç¬¦</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/17/n11946544.md#1">å°æ­Œä»”æˆå›½å®å°å‡¤ä»™ç—…é€ äº«å¯¿80å²ã€€</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹æ–°å† ç—…æ¯’</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/16/n11945468.md#1">èµµä¸½é¢–å¤å·¥æ™’ç‰‡åœºç…§ åŠè¶…é«˜å¨äºšåŽ‹æ ¹çœ‹ä¸åˆ°äºº</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/11/n11933369.md#1">æ¸…æœå­¦å£«ä¸‰å¥‡æ¢¦ æ˜¯è°æŽŒæ¡ä»–çš„ä¸€ç”Ÿï¼Ÿ</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/1/2/n11764074.md#1">ä»–ä»¬èº«ä¸Šçš„æ¯’ç–® åŽŸæ¥æ˜¯å¤™æ€¨</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/13/1/31/n3790016.md#1">ç±³å¼€æœ—åŸºç½—Michelangeloï¼ˆ1ï¼‰æ—©å¹´ç”Ÿæ¶¯</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/7/n11923201.md#1">ã€åŽ†å²å›žçœ¸ã€‘æŠµæŠ—æžæƒ æœ€ç®€å•çš„æ–¹æ³•æ˜¯æ‹’ç»è¯´è°Ž</a></li>
+<li><a href="https://github.com/aakpdw3186/djy/blob/master/gb/20/3/6/n11920418.md#1">çº¿æ¡é­”æœ¯å®¶  ç™½æå¤§å¸ˆæŽå…¬éºŸå’Œäº”é©¬å›¾</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/aakpdw3186/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/aakpdw3186/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/8/18/n11460575.htm">éª¨ç˜¦å¦‚æŸ´çš„70å²å¤§è±¡è¢«è¿«å‚åŠ æ¸¸è¡Œ ç½‘æ°‘å¿ƒç—›</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/aakpdw3186/djy/blob/master/gb/19/8/18/n11460575.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/aakpdw3186/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/aakpdw3186/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/aakpdw3186/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/aakpdw3186/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aakpdw3186/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
